--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.6-alpine3.9
 
 RUN apk update && apk add git
 
-# RUN git clone https://github.com/pieterbork/ADBHoney.git
-ADD ./ADBHoney /
+RUN git clone https://github.com/Mripumpkin/adbtest.git
+#ADD ./ADBHoney /
 
 WORKDIR ADBHoney
 COPY entrypoint.sh /
